# rod

./: Cargo.toml  CommandLineHelp.md  README.md  default.nix  flake.nix
.github/workflows/: reelease.yml
src/: config.rs  inspector.rs  main.rs
