[package]
name = "rod"
version = "0.1.9"
edition = "2024"
description = "CLI tool for Dark and Light Mode detection"
homepage = "https://github.com/leiserfg/rod"
authors = ["Leiser Fernández Gallo <leiserfg@gmail.com>"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap-markdown = "0.1.4"
dirs = "6.0.0"
libc = "0.2.171"
serde = { version = "1.0.217", features = ["serde_derive"] }
termion = "4.0.4"
toml = "0.8.19"


[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
