[package]
name = "rod"
version = "0.1.10"
edition = "2024"
description = "CLI tool for Dark and Light Mode detection"
homepage = "https://github.com/leiserfg/rod"
authors = ["Leiser Fernández Gallo <leiserfg@gmail.com>"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap-markdown = "0.1.4"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
toml = "0.8.19"
terminal-colorsaurus = "0.4.8"


[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
